--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "firebase": "^10.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3"
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.12.0",
+    "react-redux": "^8.1.3",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^1.9.7",
